--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
+  "name": "cloud-cost-optimiser",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "lucide-react": "^0.562.0"
+  },
+  "devDependencies": {
+    "vite": "^5.4.0"
   }
 }
